# MARMaths

./: .gitignore  CMakeLists.txt  LICENSE.md  MARMaths.h  MARMaths.sln  MARMaths.vcxproj  MARMaths.vcxproj.filters  README.md  main.cpp
docs/: Doxyfile  conf.py  index.rst  requirements.txt
docs/general/: introduction.rst
docs/math/: basic.rst  mat4.rst  trig.rst  vec2.rst  vec3.rst  vec4.rst
docs/references/: basic.rst  mat4.rst  quat.rst  trig.rst  vec2.rst  vec3.rst  vec4.rst
include/: MARMaths.h
src/: basic.cpp  basic.h  mat4.cpp  mat4.h  maths.h  quat.cpp  quat.h  trig.cpp  trig.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
src/mat/: mat4.cpp  mat4.h
src/math_func/: Basic_Math.h  basic.cpp  basic.h
src/trig/: trig.cpp  trig.h  trigonometric.h
src/vec/: vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
tests/: test.cpp  tests.vcxproj
